src/rules/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B010_B009_B010.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    SetAttrWithConstant: ~
  location:
    row: 37
    column: 0
  end_location:
    row: 37
    column: 25
  fix:
    content: foo.bar = None
    location:
      row: 37
      column: 0
    end_location:
      row: 37
      column: 25
  parent: ~
- kind:
    SetAttrWithConstant: ~
  location:
    row: 38
    column: 0
  end_location:
    row: 38
    column: 29
  fix:
    content: foo._123abc = None
    location:
      row: 38
      column: 0
    end_location:
      row: 38
      column: 29
  parent: ~
- kind:
    SetAttrWithConstant: ~
  location:
    row: 39
    column: 0
  end_location:
    row: 39
    column: 28
  fix:
    content: foo.abc123 = None
    location:
      row: 39
      column: 0
    end_location:
      row: 39
      column: 28
  parent: ~
- kind:
    SetAttrWithConstant: ~
  location:
    row: 40
    column: 0
  end_location:
    row: 40
    column: 29
  fix:
    content: foo.abc123 = None
    location:
      row: 40
      column: 0
    end_location:
      row: 40
      column: 29
  parent: ~
- kind:
    SetAttrWithConstant: ~
  location:
    row: 41
    column: 0
  end_location:
    row: 41
    column: 30
  fix:
    content: foo.bar.baz = None
    location:
      row: 41
      column: 0
    end_location:
      row: 41
      column: 30
  parent: ~

