src/rules/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B017_B017.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    NoAssertRaisesException: ~
  location:
    row: 22
    column: 8
  end_location:
    row: 23
    column: 42
  fix: ~
  parent: ~

