src/rules/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B021_B021.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    FStringDocstring: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 3
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 28
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 22
    column: 4
  end_location:
    row: 22
    column: 28
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 30
    column: 4
  end_location:
    row: 30
    column: 28
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 38
    column: 4
  end_location:
    row: 38
    column: 28
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 46
    column: 4
  end_location:
    row: 46
    column: 24
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 54
    column: 4
  end_location:
    row: 54
    column: 24
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 62
    column: 4
  end_location:
    row: 62
    column: 24
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 70
    column: 4
  end_location:
    row: 70
    column: 24
  fix: ~
  parent: ~
- kind:
    FStringDocstring: ~
  location:
    row: 74
    column: 4
  end_location:
    row: 74
    column: 48
  fix: ~
  parent: ~

