src/rules/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B025_B025.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    DuplicateTryBlockException: ValueError
  location:
    row: 19
    column: 7
  end_location:
    row: 19
    column: 17
  fix: ~
  parent: ~
- kind:
    DuplicateTryBlockException: pickle.PickleError
  location:
    row: 28
    column: 7
  end_location:
    row: 28
    column: 25
  fix: ~
  parent: ~
- kind:
    DuplicateTryBlockException: ValueError
  location:
    row: 35
    column: 7
  end_location:
    row: 35
    column: 17
  fix: ~
  parent: ~
- kind:
    DuplicateTryBlockException: TypeError
  location:
    row: 37
    column: 17
  end_location:
    row: 37
    column: 26
  fix: ~
  parent: ~

